1-12-16 -- started project in java, spent some time studying the equations.
1-13-16 -- still trying to figure out the equation, first tried building a tree
	   until i realized that was way unnecessary.
	   Bug: takes forever to calculate 100000000 values recursively
	   Solution: wrote the code to do it iteratively instead.
	   
	   I found a website that explained the Calkin-Wilf method very well, I
	   Finished the project as well and now am going through adding a 
	   README and this changelog per assignment requirements.
	   
1-13-16 -- Finished with functionality, now just perfecting and meeting project
	   requirements. 