@@ -1,0 +1,13 @@
+#include <stdio.h>
+
+int main(int argc, char *argv[]){
+  int i;
+  int j;
+  for(i = 0;i<21;i++){
+    for(j = 0; j< 80;j++){
+      printf(".");
+    }
+    printf("\n");
+  }
+  return 0;
+}
