@@ -1,3 +1,4 @@
+
 1-12-16 -- started project in java, spent some time studying the equations.
 1-13-16 -- still trying to figure out the equation, first tried building a tree
 	   until i realized that was way unnecessary.
@@ -9,4 +10,6 @@
 	   README and this changelog per assignment requirements.
 	   
 1-13-16 -- Finished with functionality, now just perfecting and meeting project
-	   requirements. 
+	requirements.
+
+1-15-16 -- Finished tweaking and am working on Makefile and README and 			CHANGELOG. Will continue work on the Makefile after class today.
